--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ body {
 }
 
 #fullscreenBtn:hover {
-    color: #007bff; /* Change color on hover */
+    color: hsl(0, 0%, 100%); /* Change color on hover */
 }
 
 /* Info button */
@@ -100,17 +100,18 @@ body {
     left: 20px;
     width: 40px;
     height: 40px;
-    font-size: 24px;
-    color: white;
+    font-size: 14px;
+    color: #333;
     background-color: rgba(0, 0, 0, 0.7);
     border: none;
     cursor: pointer;
     border-radius: 50%;
     z-index: 1001;
+    transition: color 0.3s;
 }
 
 .info-btn:hover {
-    background-color: rgba(255, 255, 255, 0.3);
+    color: hsl(0, 0%, 100%);
 }
 
 .info-box {
@@ -118,13 +119,16 @@ body {
     position: fixed;
     bottom: 70px;
     left: 20px;
-    width: 300px;
+    width: 600px;
     background-color: black;
     color: white;
     padding: 20px;
     border-radius: 10px;
     z-index: 1000;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+    font-size: 14px;
+    text-align: justify;
 }
 
 .info-box p {
