--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,7 @@ body {
     bottom: 70px;
     left: 20px;
     width: 600px;
+    max-width: 90%;
     background-color: black;
     color: white;
     padding: 20px;
@@ -133,4 +134,19 @@ body {
 .info-box p {
     margin: 0;
     font-size: 14px;
+}
+
+
+@media screen and (max-width: 768px) {
+    .info-box {
+        width: 80%; 
+        left: 10%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .info-box {
+        width: 90%; 
+        left: 5%; 
+    }
 }
